0-create-aws-resources.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'CloudFormation template to create an EC2 instance'

Parameters:
  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t2.nano
    AllowedValues:
      - t2.nano
      - t2.micro
      - t3.nano
      - t3.micro
      - t3.small
      - t3.medium
      - m5.large
      - m5.xlarge
    ConstraintDescription: Must be a valid EC2 instance type.

  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must be the name of an existing EC2 KeyPair.

Resources:
  # VPC to launch the instance in
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 172.16.0.0/28
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-VPC

  # Internet Gateway for public internet access
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-IGW

  # Attach Internet Gateway to VPC
  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  # Public Subnet
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 172.16.0.0/28
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-PublicSubnet

  # Route Table for Public Subnet
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-PublicRT

  # Public Route to Internet Gateway
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  # Associate Public Subnet with Route Table
  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  # Security Group for EC2 Instance
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access and HTTP from anywhere(0.0.0.0)
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-SG

  # IAM Role for EC2 Instance
  EC2InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-Role

  # IAM Instance Profile
  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref EC2InstanceRole
      InstanceProfileName: !Sub ${AWS::StackName}-InstanceProfile

  # EC2 Instance
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      ImageId: !FindInMap [RegionMap, !Ref 'AWS::Region', HVM64]
      SubnetId: !Ref PublicSubnet
      SecurityGroupIds:
        - !Ref EC2SecurityGroup
      IamInstanceProfile: !Ref EC2InstanceProfile
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-Instance
      UserData:
        Fn::Base64: |
          #!/bin/bash
          set -e
          exec > >(tee /var/log/user-data.log) 2>&1
          
          echo "=== Starting EC2 UserData Script ==="
          
          yum update -y
          yum install -y git curl
          
          echo "=== Installing Node.js using NVM ==="

          # Manually set up NVM environment
          export NVM_DIR="/home/ec2-user/.nvm"
          mkdir -p $NVM_DIR

          touch /home/ec2-user/.bashrc
          
          # Install NVM
          # curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.0/install.sh | bash

          # Add NVM to bashrc
          # echo 'export NVM_DIR="$NVM_DIR/.nvm"' >> ~/.bashrc
          # echo '[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"' >> ~/.bashrc

          curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.0/nvm.sh > $NVM_DIR/nvm.sh
          source $NVM_DIR/nvm.sh

          # Install Node.js 
          nvm install 24
          nvm use 24
          nvm alias default 24
          
          # Source again to ensure nvm is available
          source ~/.bashrc
          
          echo "=== Node.js $(node --version) installed successfully ==="
          
          npm install -g pnpm
          pnpm install -g pm2
          
          mkdir -p /home/ec2-user/app
          cd /home/ec2-user/app
          git clone --progress https://github.com/dchibamu/banana-republic.git .
          
          pnpm install
          pnpm run build
          pnpm run start:prod
          
          echo "=== UserData completed successfully ==="

  # Elastic IP for the instance (optional)
  EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref EC2Instance
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-EIP

# AMI Mapping for different regions
Mappings:
  RegionMap:
    af-south-1:
      HVM64: ami-06db08e8636583118 
    ap-east-1:
      HVM64: ami-0921e2da2f22f9617 
    ap-northeast-1:
      HVM64: ami-06098fd00463352b6 
    ap-northeast-2:
      HVM64: ami-07464b2b9929898f8 
    ap-northeast-3:
      HVM64: ami-0b96303a469fa0678 
    ap-south-1:
      HVM64: ami-0bcf5425cdc1d8a85 
    ap-southeast-1:
      HVM64: ami-03ca998611da0fe12
    ap-southeast-2:
      HVM64: ami-06202e06492f46177
    ca-central-1:
      HVM64: ami-09934b230a2c41883
    eu-central-1:
      HVM64: ami-Odb9040eb3ab74509
    eu-north-1:
      HVM64: ami-02baf2b4223a343e8
    eu-south-1:
      HVM64: ami-081e7f992eee19465 
    eu-west-1:
      HVM64: ami-049442a6cf8319180 
    eu-west-2:
      HVM64: ami-0a0ff88d0f3f85a14
    eu-west-3:
      HVM64: ami-00dd995cb6f0a5219
    me-south-1:
      HVM64: ami-0502022ce8bfa56a9 
    sa-east-1:
      HVM64: ami-0c27c96aaa148ba6d
    us-east-1:
      HVM64: ami-0742b4e673072066f
    us-east-2:
      HVM64: ami-05d72852800cbf29e
    us-west-1:
      HVM64: ami-0577b787189839998
    us-west-2:
      HVM64: ami-0518bb0e75d3619ca
  
Outputs:
  InstanceId:
    Description: Instance ID of the newly created EC2 instance
    Value: !Ref EC2Instance
    Export:
      Name: !Sub ${AWS::StackName}-InstanceId

  PublicIP:
    Description: Public IP address of the newly created EC2 instance
    Value: !GetAtt EC2Instance.PublicIp
    Export:
      Name: !Sub ${AWS::StackName}-PublicIP

  PublicDNS:
    Description: Public DNS name of the newly created EC2 instance
    Value: !GetAtt EC2Instance.PublicDnsName
    Export:
      Name: !Sub ${AWS::StackName}-PublicDNS

  WebsiteURL:
    Description: URL for the website
    Value: !Sub http://${EC2Instance.PublicDnsName}
    Export:
      Name: !Sub ${AWS::StackName}-WebsiteURL
